Changed Blazor to WASM

--- a/Aspire/Aspire.AppHost/H2.csproj
+++ b/Aspire/Aspire.AppHost/H2.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\API\API.csproj" />
-    <ProjectReference Include="..\..\Blazor\Blazor.csproj" />
+    <ProjectReference Include="..\..\BlazorWASM\BlazorWASM.csproj" />
   </ItemGroup>
 
 </Project>
