Aktiveret generering af dokumentationsfil og tilføjet XML-kommentarer til API-endpoints for bedre dokumentation.

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>48d8ed58-c30d-4248-969d-adbad7e437ab</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
