Refactor bookings to many-to-many with users and rooms
Replaced direct foreign key relationships between Booking, User, and Room with explicit many-to-many join entities BookingUser and BookingRoom. Updated EF Core models, context, and migrations to support the new schema. Adjusted related code and diagrams to reflect the new relationships, enabling a booking to be associated with multiple users and rooms.

--- a/API/efcpt-config.json
+++ b/API/efcpt-config.json
@@ -42,6 +42,12 @@
     },
     {
       "name": "public.Users"
+    },
+    {
+      "name": "public.BookingRooms"
+    },
+    {
+      "name": "public.BookingUsers"
     }
   ]
 }
