--- a/API/API.csproj
+++ b/API/API.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Scalar.AspNetCore" Version="2.4.19" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
