--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,8 @@ services:
       dockerfile: API/Dockerfile
     container_name: h2-api
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - "8050:8080"
+      - "8051:8081"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080;https://+:8081
@@ -27,7 +27,12 @@ services:
       dockerfile: Blazor/Dockerfile
     container_name: h2-blazor
     ports:
-      - "80:80"
+      - "8052:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - API_ENDPOINT_DOCKER=http://api:8080/
+      - API_ENDPOINT_LOCAL=http://localhost:5253/
+      - API_ENDPOINT_PRODUCTION=https://h2-api.mercantec.tech/
     depends_on:
       api:
         condition: service_healthy
