Add health checks and improve Docker/compose setup
Introduced basic health checks to the API, updated Dockerfile to install wget for health checks, and set relevant environment variables for containerized .NET. Added a simplified compose file and improved healthcheck configuration in compose.yaml to use wget. Also made API startup more robust by checking for XML comments file before including it.

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+# Install wget for health checks
+RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
@@ -27,4 +29,9 @@ RUN dotnet publish "./API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:Use
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# Set environment variables for container
+ENV DOTNET_RUNNING_IN_CONTAINER=true
+ENV DOTNET_USE_POLLING_FILE_WATCHER=1
+
 ENTRYPOINT ["dotnet", "API.dll"]
