Remove health checks and update Dockerfile user handling
Removed healthcheck configurations from compose.yaml for both API and Blazor services. Moved the USER directive in the API Dockerfile to the final stage and removed wget installation, streamlining container setup and startup.

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -2,13 +2,9 @@
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
-
-# Install wget for health checks
-RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
@@ -33,5 +29,8 @@ COPY --from=publish /app/publish .
 # Set environment variables for container
 ENV DOTNET_RUNNING_IN_CONTAINER=true
 ENV DOTNET_USE_POLLING_FILE_WATCHER=1
+
+# Switch to non-root user
+USER $APP_UID
 
 ENTRYPOINT ["dotnet", "API.dll"]
