--- a/compose.yaml
+++ b/compose.yaml
@@ -6,11 +6,10 @@ services:
       dockerfile: API/Dockerfile
     container_name: h2-api
     ports:
-      - "8050:8080"
-      - "8051:8081"
+      - "8051:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:8080;https://+:8081
+      - ASPNETCORE_URLS=http://+:8080
       - DOTNET_USE_POLLING_FILE_WATCHER=1
       - DOTNET_RUNNING_IN_CONTAINER=true
     networks:
