--- a/Blazor/nginx.conf
+++ b/Blazor/nginx.conf
@@ -1,48 +1,92 @@
-events { }
+events {
+    worker_connections 1024;
+}
+
 http {
     include mime.types;
-    types {
-        application/wasm wasm;
-    }
+    default_type application/octet-stream;
+    
+    # Logging
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+    
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json
+        application/wasm;
     
     server {
-        listen 80;
+        listen 80 default_server;
+        listen [::]:80 default_server;
         server_name localhost;
+        
         root /usr/share/nginx/html;
         index index.html;
         
-        # Gzip compression
-        gzip on;
-        gzip_vary on;
-        gzip_min_length 1024;
-        gzip_proxied expired no-cache no-store private must-revalidate auth;
-        gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json;
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
         
         # Handle Blazor WASM files
         location ~* \.(wasm)$ {
             add_header Content-Type application/wasm;
             expires 1y;
             add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
         }
         
         # Handle static files
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
         
-        # Handle SPA routing
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-        
-        # API proxy (optional - can be removed if API is on different domain)
+        # API proxy
         location /api/ {
             proxy_pass http://api:8080/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # Handle SPA routing - must be last
+        location / {
+            try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+        }
+        
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
     }
 } 
