--- a/Blazor/nginx.conf
+++ b/Blazor/nginx.conf
@@ -6,60 +6,41 @@ http {
     include mime.types;
     default_type application/octet-stream;
     
-    # Logging
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
-    
     # Basic settings
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
-    types_hash_max_size 2048;
     
     # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_proxied any;
-    gzip_comp_level 6;
     gzip_types
         text/plain
         text/css
         text/xml
         text/javascript
         application/javascript
-        application/xml+rss
-        application/json
-        application/wasm;
+        application/json;
     
     server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
+        listen 80;
         server_name localhost;
         
         root /usr/share/nginx/html;
         index index.html;
-        
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
         
         # Handle Blazor WASM files
         location ~* \.(wasm)$ {
             add_header Content-Type application/wasm;
             expires 1y;
             add_header Cache-Control "public, immutable";
-            add_header Access-Control-Allow-Origin "*";
         }
         
         # Handle static files
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
@@ -71,22 +52,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
         
-        # Handle SPA routing - must be last
+        # Handle SPA routing
         location / {
             try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-        }
-        
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
         }
     }
 } 
