--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -6,17 +6,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5253"
+      "applicationUrl": "http://localhost:8051",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:8051/swagger"
     },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:7013/swagger",
+      "launchUrl": "https://localhost:8051/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7013;http://localhost:5253"
+      "applicationUrl": "https://localhost:8051;http://localhost:8051"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
