Switch Blazor container from nginx to ASP.NET Core runtime
Replaces the nginx-based runtime in the Blazor Dockerfile with the official ASP.NET Core runtime image, removing the custom nginx.conf. Updates compose.yaml to set ASPNETCORE_URLS for the Blazor service. This simplifies deployment and leverages the built-in Kestrel server.

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,6 +30,7 @@ services:
       - "8052:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
     depends_on:
       - api
     networks:
