--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: API/Dockerfile
       args:
         BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
-    container_name: h2-api
+    container_name: h2-api-mags
     ports:
       - "8051:8080"
     environment:
@@ -25,7 +25,7 @@ services:
       args:
         BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
         VCS_REF: ${VCS_REF:-$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown')}
-    container_name: h2-blazor
+    container_name: h2-blazor-mags
     ports:
       - "8052:80"
     environment:
