Improve connection string handling and update compose config
Refactored Program.cs to log both appsettings and environment variable connection strings, and to prefer appsettings over environment variable if both are present. Updated compose.yaml to specify version, load environment variables from .env, and pass additional environment variables to the API service.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,9 @@
+version: '3.8'
+
+# Fortæller docker-compose at indlæse en .env-fil fra projektroden
+env_file:
+  - .env
+
 services:
   # API Service
   api:
@@ -14,6 +20,11 @@ services:
       - ASPNETCORE_URLS=http://+:8080
       - DOTNET_USE_POLLING_FILE_WATCHER=1
       - DOTNET_RUNNING_IN_CONTAINER=true
+      - DEFAULT_CONNECTION=${DEFAULT_CONNECTION}
+      - LOCAL_CONNECTION=${LOCAL_CONNECTION}
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_ISSUER=${JWT_ISSUER}
+      - JWT_AUDIENCE=${JWT_AUDIENCE}
     networks:
       - h2-network
 
