--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,8 @@ services:
     container_name: h2-api-mags
     ports:
       - "8053:8080"
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080
