Update nginx config, remove compose-simple, update compose
Added X-Build-Time header to Blazor/nginx.conf to assist with cache clearing. Removed the unused compose-simple.yaml file. Updated compose.yaml to use an .env file for environment variables in the API service.

--- a/Blazor/nginx.conf
+++ b/Blazor/nginx.conf
@@ -3,6 +3,9 @@ http {
     server {
         listen 80;
 
+        # Add timestamp header to force cache clearing
+        add_header X-Build-Time $time_iso8601 always;
+
         # Disable caching for HTML files
         location ~* \.html$ {
             root      /usr/share/nginx/html;
