--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
     container_name: h2-api
     ports:
       - "8051:8080"
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080
