Update API endpoint and add env file to Blazor service
Changed the default API endpoint in Program.cs to use 'https://h2-mags.mercantec.tech/'. Updated compose.yaml to include an env_file for the Blazor service, allowing environment variables to be loaded from a .env file.

--- a/compose.yaml
+++ b/compose.yaml
@@ -39,6 +39,8 @@ services:
     container_name: h2-blazor-mags
     ports:
       - "8054:80"
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - API_ENDPOINT=http://api:8080/
