--- a/compose.yaml
+++ b/compose.yaml
@@ -30,6 +30,8 @@ services:
     container_name: h2-blazor
     ports:
       - "8052:80"
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
